# n8n

./: README.md
backend/: .env  main.py  pyproject.toml  requirements.txt  test.db  test.py
backend/core/: config.py
backend/db/: database.py
backend/executor/: executor.py
backend/models/: credentials.py  execution.py  user.py  webhook.py  workflow.py
backend/nodes/: email_node.py  telegram_node.py
backend/routers/: auth.py  credential.py  webhook.py  workflow.py
backend/schema_cred_data/: email_cred_val.py  tele_cred_val.py
backend/schema_node/: email_val.py  tele_val.py  trigger_val.py
backend/schemas/: __init__.py  credentials.py  execution.py  platform.py  user.py  webhook.py  workflow.py
frontend/: CHANGES.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/credentials/: CredentialForm.tsx
frontend/src/components/layout/: AppSidebar.tsx  MainLayout.tsx
frontend/src/components/workflow/: NodeConfigPanel.tsx  WorkflowCanvas.tsx
frontend/src/components/workflow/nodes/: GmailNode.tsx  SlackNode.tsx  TelegramNode.tsx  WebhookNode.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Auth.tsx  Credentials.tsx  Index.tsx  WorkflowEditor.tsx  Workflows.tsx
frontend/src/services/: api-caller.ts  api.ts  auth.service.ts  credential.service.ts  workflow.service.ts
frontend/src/store/: workflowStore.ts
frontend/src/types/: workflow.ts
